Create appointments
